Cleaned up code and fixed id clearing bug 🎉